# nbody-sim

./: .gitignore  Cargo.toml  README.md  output.csv  plot.py
config/: simulation.json
configs/: two_body.json
nbody-frontend/: README.md  package-lock.json  package.json
nbody-frontend/src/: App.vue
nbody-frontend/src/components/: ControlPanel.vue  SimulationCanvas.vue
nbody-frontend/src/services/: api.ts
src/: main.rs
src/config/: simulation.rs
src/diagnostics/: energy.rs  mod.rs
src/integrators/: euler.rs  leapfrog.rs  mod.rs
src/output/: csv_writer.rs  mod.rs  plot.rs
src/physics/: barnes_hut.rs  body.rs  gravity.rs  mod.rs
src/render/: mod.rs
src/server/: handlers.rs  mod.rs  routes.rs  state.rs
src/simulation/: engine.rs  mod.rs
src/utils/: constants.rs
