[package]
name = "nbody-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
plotters = "0.3"
rayon = "1.8"
csv = "1.3"
macroquad = "0.4"
axum = "0.7"
tokio = { version = "1.40", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
